--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<ul>
-  <li><a routerLink="/user-list">User List</a></li>
-  <li><a routerLink="/admin">Admin</a></li>
+<ul class="header">
+  <li class="header-item" routerLinkActive="active"><a routerLink="/user-list">User List</a></li>
+  <li class="header-item" routerLinkActive="active"><a routerLink="/admin">Admin</a></li>
 </ul>
 
 <router-outlet></router-outlet>
