Initial for practice

--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -1,6 +1,6 @@
 <ul class="list" *ngIf="users.length > 0; else emptyList">
   <div class="filter">
-    <input [value]="filterValue" class="filter-input" placeholder="Input text filter here" #input (keyup)="filterValue = input.value">
+    <input #input [value]="filterValue" class="filter-input" placeholder="Input text filter here" #input (keyup)="filterValue = input.value">
     <select class="filter-input" #select [value]="filterStatus" (change)="filterStatus = select.value">
       <option [selected]="true" [value]="''">None</option>
       <option *ngFor="let item of userStatusService.statuses()" [value]="item.value">{{ item.text }}</option>
@@ -11,7 +11,7 @@
   <ng-container *ngFor="let user of filterUsers();index as i; trackBy: trackByFn">
     <ng-container *ngIf="user.isVisible">
       <li class="list-item" [class.active]="user.id === selectedUserId" (click)="selectedUserId = user.id">
-        <span class="item-name" [attr.title]="user.name">{{ i + 1 }}. {{ user.name }}</span>
+        <span class="item-name" [attr.title]="user.name">{{ i + 1 }}. {{ user.name | prefixName:user.gender }}</span>
         <app-badge-component [status]="user.status"></app-badge-component>
       </li>
     </ng-container>
@@ -25,6 +25,9 @@
   <div class="user-info-content">
     <div class="user-info-content-item">Id: <b>{{ user.id }}</b></div>
     <div class="user-info-content-item">Username: <b>{{ user.name }}</b></div>
+    <div class="user-info-content-item">Date: <b>{{ user.date | date:"medium":"+0300":"ua" }}</b></div>
+    <div class="user-info-content-item">Earned: <b>{{ user.earned | currency:"EUR" }}</b></div>
+    <!--<div class="user-info-content-item">JSON: <b>{{ user | json }}</b></div>-->
     <div class="user-info-content-item">
       <app-badge-component [status]="user.status"></app-badge-component>
     </div>
