--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,3 +17,12 @@
         color: black;
     }
 }
+
+.user {
+    float: right;
+    display: block;
+    position: absolute;
+    right: 30px;
+    top: 10px;
+    font-weight: bold;
+}
