--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <ul class="header">
   <li class="header-item" routerLinkActive="active"><a routerLink="/user-list">User List</a></li>
+  <li class="header-item" routerLinkActive="active"><a routerLink="/chat">Chat</a></li>
   <li class="header-item" routerLinkActive="active"><a routerLink="/admin">Admin</a></li>
+
+  <li class="user" *ngIf="userService.getUser()">Current user: {{ userService.getUser() }} <button (click)="remove()">X</button></li>
 </ul>
 
 <router-outlet></router-outlet>
