Initial for practice

--- a/src/app/chat/chat/chat.component.html
+++ b/src/app/chat/chat/chat.component.html
@@ -4,21 +4,18 @@
 
 <ng-template #chatTemplate>
   <div class="chat-block">
-    <div class="users" *ngIf="(users$ | async) as users">
-      <div class="item"><b>Online ({{ users.length }})</b></div>
-      <div *ngFor="let user of users"><a routerLink="/chat/{{ user }}">{{ user }}</a></div>
-    </div>
+    <!--<div class="users">-->
+      <!--<div class="item"><b>Online (count)</b></div>-->
+      <!--<div>username></div>-->
+    <!--</div>-->
     <div class="chat-container">
       <div class="item"><b>Chat</b></div>
-      <ng-container *ngIf="(users$ | async) as users">
-        <div *ngIf="users && users.length">
-          <label>Filter by: </label>
-          <select (change)="chatWith = $event.target.value;updateSubject.next()">
-            <option [value]="''">All</option>
-            <option *ngFor="let name of users" [value]="name">{{ name }}</option>
-          </select>
-        </div>
-      </ng-container>
+      <!--<ng-container>-->
+        <!--<div>-->
+          <!--<label>Filter by: </label>-->
+          <!--<select><option></option></select>-->
+        <!--</div>-->
+      <!--</ng-container>-->
       <div class="chat" #chat>
         <div class="message-container" *ngFor="let message of messages$ | async" [class.you]="currentUser === message.author">
           <div class="message-item">
