--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,3 +7,7 @@
 </ul>
 
 <router-outlet></router-outlet>
+
+<!--<div>{{ counter$ | async }}</div>-->
+<!--<button (click)="increment()">Increment</button>-->
+<!--<button (click)="decrement()">Decrement</button>-->
