--- a/src/app/admin/admin/admin.component.html
+++ b/src/app/admin/admin/admin.component.html
@@ -1,14 +1,14 @@
 <div class="item"><b>Add new user</b></div>
 
 <div class="item">
-  <input #input placeholder="Input user name">
+  <input #input placeholder="Input user name" name="name">
 </div>
 <div class="item">
-  <select #select>
+  <select #select name="status">
     <option *ngFor="let item of userStatusService.statuses()" [value]="item.value">{{ item.text }}</option>
   </select>
 </div>
 <div class="item">
-  <button (click)="add(input.value, select.value); input.value = ''">Add</button>
-  <button routerLink="/user-list">Back to user list</button>
+  <button (click)="add(input.value, select.value); input.value = ''" id="add1">Add</button>
+  <button routerLink="/user-list" id="user-list">Back to user list</button>
 </div>
