--- a/src/app/admin/admin/admin.component.html
+++ b/src/app/admin/admin/admin.component.html
@@ -9,6 +9,6 @@
   </select>
 </div>
 <div class="item">
-  <button (click)="add(input.value, select.value); input.value = ''">Add</button>
+  <button (click)="add(input.value, select.value); input.value = ''" id="add">Add</button>
   <button routerLink="/user-list">Back to user list</button>
 </div>
