--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -1,4 +1,4 @@
-<ul class="list" *ngIf="users.length > 0; else emptyList">
+<ul class="list">
   <div class="filter">
     <input #input [value]="filterValue" class="filter-input" placeholder="Input text filter here" #input>
     <select class="filter-input" #select [value]="filterStatus" (change)="filterStatus = select.value">
@@ -8,12 +8,14 @@
     <button class="filter-input" (click)="filterStatus = ''; filterValue = ''">Reset filters</button>
   </div>
 
-  <ng-container *ngFor="let user of filterUsers();index as i; trackBy: trackByFn">
-    <ng-container *ngIf="user.isVisible">
-      <li class="list-item" [class.active]="user.id === selectedUserId" (click)="selectedUserId = user.id">
-        <span class="item-name" [attr.title]="user.name">{{ i + 1 }}. {{ user.name | prefixName:user.gender | badgeText:user.status }}</span>
-        <app-badge-component [status]="user.status"></app-badge-component>
-      </li>
+  <ng-container *ngIf="users.length > 0; else emptyList">
+    <ng-container *ngFor="let user of filterUsers();index as i; trackBy: trackByFn">
+      <ng-container *ngIf="user.isVisible">
+        <li class="list-item" [class.active]="user.id === selectedUserId" (click)="selectedUserId = user.id">
+          <span class="item-name" [attr.title]="user.name">{{ i + 1 }}. {{ user.name | prefixName:user.gender | badgeText:user.status }}</span>
+          <app-badge-component [status]="user.status"></app-badge-component>
+        </li>
+      </ng-container>
     </ng-container>
   </ng-container>
 </ul>
